experimental component registry

--- a/dynamic-components/src/app/app.component.html
+++ b/dynamic-components/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ul>
   <li><a [routerLink]="'/'">Home</a></li>
   <li><a [routerLink]="'/wrapped'">Dynamic Wrapper</a></li>
+  <li><a [routerLink]="'/list'">List</a></li>
 </ul>
 
 <router-outlet></router-outlet>
